# click-extended

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  release.yml  tests.yml
click_extended/: __init__.py  classes.py  errors.py  types.py
click_extended/constraints/: __init__.py  length.py
click_extended/core/: __init__.py  _aliased.py  _child.py  _child_node.py  _click_command.py  _click_group.py  _context.py  _context_node.py  _failure.py  _global_node.py  _main.py  _node.py  _parent.py  _parent_node.py  _root_node.py  _tree.py  argument.py  argument_node.py  child_node.py  command.py  context.py  env.py  global_node.py  group.py  option.py  option_node.py  parent_node.py  prompt.py  selection.py  tag.py  validation_node.py
click_extended/debug/: __init__.py  debug.py  visualize.py
click_extended/decorators/: __init__.py  add_prefix.py  add_suffix.py  apply.py  at_least.py  at_most.py  default.py  deprecated.py  exclusive.py  experimental.py  greater_than.py  less_than.py  load_csv.py  load_json.py  load_toml.py  load_yaml.py  random_bool.py  random_choice.py  random_datetime.py  random_float.py  random_integer.py  random_prime.py  random_string.py  random_uuid.py  to_case.py  to_date.py  to_datetime.py  to_path.py  to_time.py  to_timestamp.py  to_toml.py
click_extended/errors/: __init__.py  click_extended_error.py  decorator_implementation_error.py  exceptions.py  invalid_command_type_error.py  name_collision_error.py  no_main_node_error.py  no_parent_error.py  no_parent_node_error.py  no_root_error.py  parent_node_exists_error.py  root_node_exists_error.py  tagged_environment_error.py  usage_error.py
click_extended/globals/: __init__.py  debug.py  visualize.py
click_extended/hooks/: __init__.py  exception_types.py  hook_event.py  hook_handler.py  hook_node.py  hook_phase.py  hook_registry.py  hook_spec.py  on_boot.py  on_error.py  on_exit.py  on_init.py  types.py
click_extended/interactive/: __init__.py
click_extended/transform/: __init__.py  as_path.py  prefix.py  to_case.py  to_lowercase.py  to_uppercase.py
click_extended/utils/: __init__.py  casing.py  checks.py  dispatch.py  format.py  humanize.py  is_nested_tuple_value.py  is_single_value.py  is_tuple_value.py  naming.py  process.py  selection.py  time.py  transform.py  visualize.py
click_extended/validation/: __init__.py  is_positive.py
docs/: ARGUMENT.md  CHILD_NODE.md  COMMAND.md  ENV.md  GLOBAL_NODE.md  GROUP.md  MIGRATING_FROM_CLICK.md  OPTION.md  PARENT_NODE.md  README.md  ROOT_NODE.md  TAG.md  TRANSFORMERS.md  TREE.md
docs/concepts/: CHILD_NODE.md  CONTEXT.md  GLOBAL_NODE.md  PARENT_NODE.md  TREE.md
docs/core/: ARGUMENT_NODE.md  CHILD_NODE.md  CHILD_VALIDATION_NODE.md  CONTEXT.md  HOOKS.md  OPTION_NODE.md  PARENT_NODE.md  ROOT_NODE.md  TAG_NODE.md  TREE.md  VALIDATION_NODE.md
docs/guides/: CREATE_CHILD.md  CREATE_GLOBAL.md  CREATE_PARENT.md  MIGRATING_FROM_CLICK.md  (+1 more)
examples/: __init__.py
tests/: conftest.py  test_argument.py  test_argument_node.py  test_child_node.py  test_command.py  test_context.py  test_env.py  test_errors.py  test_group.py  test_lifecycle.py  test_node.py  test_option.py  test_option_node.py  test_parent_node.py  test_root_node.py  test_selection.py  test_tag.py  test_transform_utils.py  test_tree.py  test_utils_transform.py
(+319 files in other folders)
